<resources>
    <string name="app_name" translatable="false">Cumulus TV</string>
    <string name="sample_tv_input_name" translatable="false">Cumulus TV</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tv_input_activity" translatable="false">com.felkertech.cumulustv.activities.CumulusChannelsSetup</string>
    <string name="action_settings">Settings</string>
    <string name="sm_google_drive_id" translatable="false">GDRIVE_FILE</string>
    <string name="sm_last_version" translatable="false">VERSION</string>
    <string name="intro_title_1">Welcome to CumulusTV</string>
    <string name="intro_msg_1">"CumulusTV lets you create custom channels that can be played through the Live Channels app. Don't know what to watch? Pick a suggested channel."</string>
    <string name="intro_title_2">Use Google Drive</string>
    <string name="intro_msg_2">You can create a JSON file on Google Drive and have your channels synced across all your devices.</string>
    <string name="intro_title_21">How to Sync</string>
    <string name="intro_msg_21">"-Create Syncable JSON File in Google Drive\n-Create a Channel\n-On your computer the file should show up.\n    You can add more channels here.\n-Save the file.\n-Data will automatically sync periodically."</string>
    <string name="intro_title_3">Report Problems</string>
    <string name="intro_msg_3">You can browse the source code on GitHub and report any issues you find or suggest a feature. Have a problem with the JSON? You can browse the format there.</string>
    <string name="intro_title_4">Get Started</string>
    <string name="intro_msg_4">"After creating channels, go to the Live Channels app. You'll have to make sure your channels are setup. Then, pick the channels you want visible."</string>
    <string name="about_app" translatable="false">@string/settings_about</string>
    <string name="about_app_description">v%1$s\nBackground art by Marcelo Franceschini\nFrench Translations by @mcmjau\n\nThe app is open source and available on GitHub.</string>
    <string name="manage_livechannels">Open Live Channels</string>
    <string name="manage_add_suggested">Add Suggested Channel</string>
    <string name="manage_add_new">Add New Channel</string>
    <string name="settings_sync_file">Sync File with Google Drive</string>
    <string name="settings_browse_plugins">Browse Plugins</string>
    <string name="settings_switch_google_drive">Import from Google Drive</string>
    <string name="settings_refresh_cloud_local">Redownload Channel List</string>
    <string name="settings_view_licenses">View Software Licenses</string>
    <string name="settings_reset_channel_data">Reset Channel Data</string>
    <string name="settings_about">About Cumulus TV</string>
    <string name="settings_read_xmltv">Read XMLTV (Experimental)</string>
    <string name="more_actions">More Actions</string>
    <string name="create_syncable_file">"Create a syncable file"</string>
    <string name="create_syncable_file_description">"Save channel info in Google Drive so you can always access it"</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_live_channels">"Is Live Channels installed? Email felker.tech@gmail.com"</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="select_genres">Select Genres</string>
    <string name="add_new_channel" translatable="false">@string/manage_add_new</string>
    <string name="edit_new_channel">Edit Channel</string>
    <string name="try_again">Try Again</string>
    <string name="downloaded">"Download complete"</string>
    <string name="uploaded">"Upload complete"</string>
    <string name="invalid_file">"Invalid drive file. Please choose a different file."</string>
    <string name="sync_initial">"Choose Initial Action"</string>
    <string name="sync_cloud_local">"Write cloud data to local"</string>
    <string name="sync_local_cloud">"Write local data to cloud"</string>
    <string name="my_channels">"All Channels"</string>
    <string name="no_channels">"You have no streams"</string>
    <string name="channel_dupe">Channel already added</string>
    <string name="channel_added">%1$s has been added</string>
    <string name="here_are_suggested_channels">"Here are some suggested channels"</string>
    <string name="no_channels_find">"Find a few streams to add"</string>
    <string name="version">Version %1$s</string>
    <string name="permission_storage_rationale">Your channel data is backed up automatically through Google Drive.</string>
    <string name="permission_not_allowed_error">"You don't have permission"</string>
    <string name="permission_not_allowed_text">CumulusTV is not allowed to access your storage, so syncing is disabled. The app will continue to work by itself.</string>
    <string name="permission_action_settings">View Permissions</string>
    <string name="import_bulk_title">Import %1$d Channels?</string>
    <string name="import_bulk_wait">Hold on a sec...</string>
    <string name="import_null" translatable="false">Found a null Uri</string>
    <string name="import_bulk_success">"You're good to go!"</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="help">View Tutorial</string>
    <string name="website">Visit website</string>
    <string name="pref_dream_text_key" translatable="false">pref_dream_text</string>
    <string name="pref_dream_text_default" translatable="false">zzzZZZzzz</string>
    <string name="pref_dream_text_title" translatable="false">Ticker text</string>
    <string name="daydream_url" translatable="false">STREAM_TO_BE_PLAYED_IN_DAYDREAM</string>
    <string name="daydream_select_channel">Select Channel</string>
    <string name="daydream_success">Daydream was updated successfully</string>
    <string name="about_mlc" translatable="false">About MLC</string>
    <string name="about_mlc_summary" translatable="false">MLC is an experimental, web-based, leanback, musical experience.</string>
    <string name="about_mlc_issues" translatable="false">Visit Issue Tracker</string>
    <string name="connect_drive">Connect to Google Drive</string>
    <string name="toast_setup_complete">Setup complete. Make sure you enable these channels in the channel list.</string>
    <string name="toast_please_report">Please report this error and your JSON file: %1$s</string>
    <string name="toast_report_database_null">Report this error with your JSON file: DatabaseObject is null</string>
    <string name="toast_error_object_undefined">Error adding: object is undefined</string>
    <string name="toast_error_no_loading_screen">The loading screen can\'t seem to open, but the channel is loading.</string>
    <string name="toast_error_cannot_tune">Something\'s wrong. Cannot tune to this channel.</string>
    <string name="toast_error_low_memory">You\'re running low on system memory. Things may not work as expected.</string>
    <string name="toast_error_channel_number">Your channel must have a number!</string>
    <string name="toast_msg_no_support_READALL">This plugin doesn\'t support READALL</string>
    <string name="toast_error_channel_invalid">Channel is invalid</string>
    <string name="toast_msg_pack_not_installed">"Plugin %1$s not installed."</string>
    <string name="create_sync_file_title">Create a syncable file</string>
    <string name="create_sync_file_description">Save channel info in Google Drive so you can always access it</string>
    <string name="toast_error_driveid_invalid">Error: DriveId is invalid</string>
    <string name="toast_msg_channels_deleted">The deed was done</string>
    <string name="title_delete_all_channels">Delete all your channel data?</string>
    <string name="toast_msg_wait_google_api_client">Please wait until Drive Service is active</string>
    <string name="software_licenses">Software Licenses</string>
    <string name="choose_an_app">Choose an app</string>
    <string name="choose_default_app">Select a plugin to use.</string>
    <string name="installed_plugins">Installed Plugins</string>
    <string name="download_more_plugins" translatable="false">Download More</string>
    <string name="connection_issue_title" translatable="false">Connection Issue</string>
    <string name="connection_issue_description">Cannot connect to Google Drive at this moment.</string>
    <string name="plugin_not_installed_title">"Plugin %1$s not installed"</string>
    <string name="plugin_not_installed_question">What do you want to do instead?</string>
    <string name="download_app">Download app</string>
    <string name="open_in_another_plugin">Open in another plugin</string>
    <string name="toast_error_no_activity">Uh-oh, something isn\'t working: loadRows has no activity</string>
    <string name="add">Add</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="play">Play</string>
    <string name="toast_error_sorry">Sorry, we couldn\'t do that.</string>
    <string name="edit_channel_name">Edit %1$s metadata</string>
    <string name="open_cumulus_tv">Open Cumulus TV</string>
    <string name="report_playback_issue">Report a playback issue (Sends the Url)</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="add_channel_txt">Add Channel</string>
    <string name="channel_no_xxx">\"Channel # %1$s\"</string>
    <string name="suggested_channels">Suggested Channels</string>
    <string name="google_drive_sync">Vous ne pouvez importer qu\'un fichier JSON valide via Google Drive</string>
    <string name="manage">Manage</string>
    <string name="settings">Settings</string>
    <string name="download_complete">Download complete</string>
    <string name="upload_complete">Upload complete</string>
    <string name="website_url" translatable="false">"http://cumulustv.herokuapp.com"</string>
    <string name="toast_error_channel_name" translatable="false">Your channel must have a name</string>
    <string name="toast_error_channel_media_url" translatable="false">Your channel must have a media url</string>
    <string name="loading_data">Loading data</string>
    <string name="export_m3u">Export M3u Playlist</string>
    <string name="search_results">Search results</string>
    <string name="msg_open_web">This is not a video stream, interpreting as a website</string>
    <string name="sync_channels">Sync channels</string>
    <string name="in_progress">In Progress</string>
    <string name="error_sync_canceled">Sync canceled</string>
    <string name="error_sync_no_data">No data found</string>
    <string name="error_sync_default">"Scan error %1$d"</string>
    <string name="streaming_audio">Streaming Audio</string>
    <string name="msg_no_url_found">No URL found</string>
    <string name="channel_number">Channel Number</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_logo">Logo Url</string>
    <string name="channel_media">Media Url</string>
    <string name="channel_splashscreen">Splashscreen Url</string>
    <string name="channel_epg">Epg Url</string>
    <string name="open_stream">Open Stream</string>
    <string name="link_to_m3u">Link to an M3u Playlist</string>
    <string name="m3u_url">M3u Url</string>
    <string name="add_jsonlisting">Link to M3U Playlist</string>
    <string name="msg_url_empty">Url is empty</string>
    <string name="msg_unsupported_action">Unsupported action</string>
    <string name="debug">Debug</string>
    <string name="option_sort_by_number">Sort by Number</string>
    <string name="print_database">Print Database</string>
    <string name="msg_help">Help</string>
    <string name="print_system_data">Print System Data</string>
    <string name="about">About</string>
</resources>