<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_import"
        android:title="@string/settings_switch_google_drive"
        android:icon="@drawable/ic_google_drive_folder"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_licenses"
        android:title="@string/software_licenses"
        app:showAsAction="never" />
    <item android:id="@+id/menu_reset_data"
        android:title="@string/settings_reset_channel_data"
        app:showAsAction="never" />
    <item android:id="@+id/menu_about"
        android:title="@string/about_app"
        app:showAsAction="never"
        />
    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
</menu>